@@ -1,4 +1,14 @@
+1998-07-30  Leif Hedstrom  <leif@netscape.com>
+
+	* Utils.pm (userCredentials): Added this function, to make it easy
+	to get credentials when binding as a user.
+
+	* Conn.pm (getError): Fixed bug with passing read-only argument.
+
 1998-07-29  Leif Hedstrom  <leif@netscape.com>
+
+	* Utils.pm (unixCrypt): Moved from my LdapUtils.pm module.
+	Added askPassword to the export tag.
 
 	* Conn.pm (new): Added support for passing a hash array of all the
 	parameters, as returned by the ldapArgs() function.
